cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(MY_GRAND_PROJECT)
SET(CMAKE_C_COMPILER g++)
if(CMAKE_COMPILER_IS_GNUCXX)
    add_compile_options(-std=c++14)
    message(STATUS "optional:-std=c++11")
endif(CMAKE_COMPILER_IS_GNUCXX)
find_package(PCL 1.3 REQUIRED COMPONENTS common io kdtree filters features search)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
set(SRC_LIST refinement.hpp test.cpp)
add_executable(refinement ${SRC_LIST})
target_link_libraries(refinement ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES}${PCL_KDTREE_LIBRARIES} ${PCL__FILTERS_LIBRARIES} ${PCL_FEATURES_LIBRARIES} ${PCL_SEARCH_LIBRARIES})
